Cải thiện phần Header (thêm position sticky)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,18 @@ a {
 }
 
 /* ==========================Header=========================== */
-.header {
+
+.fixed-header {
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+    padding-top: 26px;
+    background-color: #e6f0ff;
+}
+
+.hero-wrap {
+    display: flex;
+    flex-direction: column;
     background-color: #e6f0ff;
     position: relative;
     height: 100vh;
@@ -60,7 +71,7 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
 }
 
 .navbar ul {
