Fix bug phần Navbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,11 @@
     --primary-color: #0f1b4c;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -65,7 +70,7 @@ a {
     flex-direction: column;
     background-color: #e6f0ff;
     position: relative;
-    height: 100vh;
+    height: calc(100vh - 90px);
 }
 
 .navbar {
